# TraCR

./: .fix-style.sh  .gitignore  .gitlab-ci.yml  .gitmodules  README.md  meson.build  meson_options.txt
.github/workflows/: style.yml  tracr.yml
.github/workflows/.build-tools/style/: check-style.sh
common/: common.h  compat.h  instr.h  taskr_instr.hpp
examples/: README.md  basic_ovni.cpp  cleanup_script.sh  markers.cpp  markers_vanilla.cpp  meson.build  ovniemu_test.sh  pthread_example.cpp  pthread_task_markers.cpp  pthread_thread_markers.cpp  pthreads.cpp  pthreads_example.cpp  pthreads_markers.cpp  pthreads_task_markers.cpp  pthreads_thread_markers.cpp  task_markers.cpp  tasking_example.cpp  tasking_states.cpp  thread_markers.cpp  thread_states.cpp  trace_test.cpp  vmarkers_push_pop.cpp  vmarkers_set.cpp
examples/bash_scripts/: cleanup_script.sh  create_dirs.py  custom_both.json  custom_channel_names.json  custom_markerTypes.json  ovniemu_test.sh
examples/pytracr/: pthread_example.py  task_markers.py  task_vmarkers.py  thread_markers.py  vmarkers_push_pop.py  vmarkers_set.py
examples/tracr/: performance_test.cpp  pthread.cpp  pthread_easy_example.cpp  pthread_example.cpp  simple.cpp  simple_example.cpp  task_markers.cpp  task_vmarkers.cpp  thread_markers.cpp  vmarkers_push_pop.cpp  vmarkers_set.cpp
include/pytracr/: README.md  meson.build  pyruntime.hpp  pytracr.cpp
include/tracr/: base_instr.hpp  marker_management_engine.hpp  tracr.cpp  tracr.hpp  tracr_core.hpp
postprocessing/: meson.build  tracr_process.cpp
postprocessing/paraver/: state.cfg  tracr.pcf  tracr.prv  tracr.row
python_scripts/: ovni_runtime_plotter.py
src/: base_instr.hpp  detectr.cpp  detectr.hpp  instrumentation.hpp  meson.build  taskr_instr.hpp  tracr.cpp  tracr.hpp
subprojects/: ovni.wrap
tests/: basic_check.cpp  meson.build
